<resources>
    <string name="app_name">NeuroFleet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="title_feed">Feed</string>
    <string name="zero_trips_found">No trips are found</string>
    <string name="sync_interval_minutes">Sync Interval (minutes)</string>
    <string name="save_apply"><![CDATA[Save & Apply]]></string>
    <string name="enter_api_url">Enter API URL</string>
    <string name="title_settings">Settings</string>
    <string name="select_interval_for_sync">Sync Interval</string>
    <string name="title_activity_trip_details">TripDetailsActivity</string>
    <string name="trip">Trip</string>
    <string name="driven">Driven</string>
    <string name="fuel">Fuel</string>
    <string name="speed">Speed</string>
    <string name="username">username</string>
    <string name="password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account yet</string>
    <string name="name">Name</string>
    <string name="emailid">Enter your email</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="enter_score_url">Profile Score URL</string>
    <string name="trips">Trips</string>
    <string name="title_trips">Trips</string>
    <string name="title_stats">Stats</string>
    <string name="mystreak">My Streak</string>
    <string name="week">Week</string>
    <string name="todaysdate">Todays Date</string>
    <string name="su">Su</string>
    <string name="sa">Sa</string>
    <string name="fr">Fr</string>
    <string name="th">Th</string>
    <string name="we">We</string>
    <string name="tu">Tu</string>
    <string name="mo">Mo</string>
    <string name="rankfordriver">You are amongst our Top 10 drivers this week</string>
    <string name="oops_no_trips_found">Oops! No trips found</string>
    <string name="start_riding_to_initiate_the_insights">Start riding to initiate the insights</string>
    <string name="recent_trip">Recent Trip</string>
    <string name="subtext_for_your_trips">You can preview your route and data from each trip, just select a trip.</string>
    <string name="my_stats">My Stats</string>
    <string name="accerlation">Accerlation</string>
    <string name="safty_score">Safety Score</string>
    <string name="you_are_doing_great_cowboy">You are doing great cowboy!</string>
    <string name="stat_subtext">Your score defined you performance and your excellence!</string>
    <string name="safty_parameters">Safety Params</string>
    <string name="general_parameters">General Params</string>
    <string name="sign_up_instead">Sign up instead</string>
    <string name="signup">Sign up</string>
    <string name="enteryourname">Enter your name</string>
    <string name="repassword">Confirm your password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="password_update">Password Update</string>
    <string name="app_settings">App Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="by_doing_so_you_lose_your_data_and_history">By doing so you lose your data and history.</string>
    <string name="do_you_want_to_logout">Do you want to logout? 😟</string>
    <string name="else_login_with_email">else Login with email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_dashboard_url">Enter Stats url</string>
    <string name="initial_setup_info">Note: Please configure the API URL in Settings to continue using the app.
After the API URL is successfully configured, you can navigate to the Login screen.
</string>
    <string name="app_logo">App Logo</string>
    <string name="good_morning">Good Morning,</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="good_evening">Good Evening,</string>
    <string name="good_night">Good Night,</string>
    <string name="sign_in_to_track_your_trips_and_scores">Sign in to track your trips and scores</string>
</resources>