<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Container with rounded background and driver info -->
    <LinearLayout
        android:id="@+id/containerBottomsheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="180dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_bg"
        android:padding="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MH11 BT 2520"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Driver name: Omkar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/floatingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="-30dp"
        android:scaleX=".7"
        android:scaleY=".7"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_car"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/containerBottomsheet" />
    <LinearLayout
        android:id="@+id/detailsll"
        app:layout_constraintTop_toBottomOf="@+id/containerBottomsheet"
        android:layout_width="match_parent"
        android:layout_marginTop="-5dp"
        android:maxHeight="35dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_dark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="@string/trip"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:padding="15dp"
            app:drawableTopCompat="@drawable/ic_bottom_trip" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="@string/driven"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:padding="15dp"
            app:drawableTopCompat="@drawable/ic_bottom_driven" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="@string/fuel"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:padding="15dp"
            app:drawableTopCompat="@drawable/ic_bottom_fuel"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="@string/speed"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:padding="15dp"
            app:drawableTopCompat="@drawable/ic_bottom_fuel"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvdetailsll"
        app:layout_constraintTop_toBottomOf="@+id/detailsll"
        android:layout_width="match_parent"
        android:layout_marginTop="-5dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_bg_dark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="6"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="170km"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="8ltrs"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            android:text="80km/hr"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
